homelab/k8s/lemmy/lemmy-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lemmy-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lemmy-ui
  template:
    metadata:
      labels:
        app: lemmy-ui
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: lemmy-ui
      containers:
        - name: lemmy-ui
          image: dessalines/lemmy-ui:0.19.5
          ports:
            - containerPort: 1234
              name: http
---

apiVersion: v1
kind: Service
metadata:
  name: lemmy-ui
spec:
  selector:
    app: lemmy-ui
  ports:
    - port: 1234
      name: http
      targetPort: http
