homelab/k8s/lemmy/lemmy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lemmy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lemmy
  template:
    metadata:
      labels:
        app: lemmy
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: lemmy
      containers:
        - name: lemmy
          image: dessalines/lemmy:0.19.5
          ports:
            - containerPort: 8536
              name: http
          volumeMounts:
            - mountPath: /config/
              name: config
      volumes:
        - name: config
          secret:
            secretName: backend-config
            items:
              - key: config
                path: config.hjson

---

apiVersion: v1
kind: Service
metadata:
  name: lemmy
spec:
  selector:
    app: lemmy
  ports:
    - port: 8536
      name: http
      targetPort: http
